<resources>
    <string name="app_name">GestionContact_Boudjema_Rachdi_Rahmani</string>
    <string name="add_contact">Ajouter Contact</string>
    <string name="call_contact">Appeler</string>
    <string name="hint_name">Nom</string>
    <string name="hint_phone">Téléphone</string>
    <string name="hint_address">Adresse</string>
    <string name="save">Sauvegarder</string>
    <string name="hint_contact_photo">Lien photo</string>
    <string name="contact_photo">Photo du contact</string>
    <string name="delete_contact">Supprimer le contact</string>
</resources>